# fetch-github-hosts

./: .gitignore  .goreleaser.yml  FyneApp.toml  README.md  README_EN.md  README_JA.md  active.en-US.toml  active.zh-CN.toml  app.config.ts  args.go  bump.sh  conf.go  consts.go  fetch_hosts.go  fetch_hosts.php  fetch_hosts_test.go  go.mod  go.sum  gui.go  gui_theme.go  i18n.go  index-template.html  index-template.php  index.template  log.go  main.go  no_gui.go  nuxt.config.ts  package-lock.json  package.json  ticker.go  use.sh  util.go
.github/workflows/: build-linux-windows.yml  build-linux.yml  build-mac.yml  build-macos.yml  build-windows.yml  release.yml
assets/: domains.json  index.html
assets/css/: main.css
assets/public/: style.css  style.min.css
components/: AboutPanel.vue  ClientMode.vue  LogViewer.vue  ServerMode.vue
composables/: useAppVersion.ts  useConfig.ts  useTauri.ts
i18n/locales/: en-US.json  ja-JP.json  zh-CN.json
pages/: index.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: server_template.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  config.rs  dns.rs  hosts.rs  lib.rs  main.rs  models.rs  services.rs
