[package]
name = "fetch-github-hosts"
version = "4.0.0"
description = "Github Hosts synchronization tool"
authors = ["Licoy"]
license = "GPL-3.0"
repository = "https://github.com/Licoy/fetch-github-hosts"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-log", "dep:tauri-plugin-shell"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api", "tray-icon"], optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dns-lookup = "2"
chrono = "0.4"
dirs = "6"
sys-locale = "0.3.2"
clap = { version = "4.5.58", features = ["derive"] }
